# backend/endpoint_get_all_sites.go
@@ -7,6 +7,7 @@ import (
 	pb "github.com/znacol/camping/backend/proto"
 )
 
+// GetAllSites retrieves all sites and their info
 func (s *Service) GetAllSites(ctx context.Context, request *pb.GetAllSitesRequest) (response *pb.GetAllSitesResponse, err error) {
 	sites, err := s.dbClient.GetSites(ctx)
 	if err != nil {
@@ -22,13 +23,50 @@ func (s *Service) GetAllSites(ctx context.Context, request *pb.GetAllSitesReques
 			NationalForestId: s.NationalForestID,
 			DistrictId:       s.DistrictID,
 			Altitude:         s.Altitude,
-			Notes:            s.Notes,
+			Notes:            s.Notes.String,
 		}
 		locs = append(locs, site)
 	}
 
 	response = &pb.GetAllSitesResponse{
 		Sites: locs,
+	}
+
+	return response, nil
+}
+
+// GetNationalForest retrieves a forest given an id
+func (s *Service) GetNationalForest(ctx context.Context, request *pb.GetNationalForestRequest) (response *pb.GetNationalForestResponse, err error) {
+	forest, err := s.dbClient.GetNationalForest(ctx, request.Id)
+	if err != nil {
+		return nil, errors.Wrap(err, "fetching national forest")
+	}
+
+	response = &pb.GetNationalForestResponse{
+		Forest: &pb.NationalForest{
+			Id:      forest.ID,
+			Name:    forest.Name,
+			Website: forest.Website.String,
+		},
+	}
+
+	return response, nil
+}
+
+// GetDistrict retrieves a district given an id
+func (s *Service) GetDistrict(ctx context.Context, request *pb.GetDistrictRequest) (response *pb.GetDistrictResponse, err error) {
+	forest, err := s.dbClient.GetDistrict(ctx, request.Id)
+	if err != nil {
+		return nil, errors.Wrap(err, "fetching district")
+	}
+
+	response = &pb.GetDistrictResponse{
+		District: &pb.District{
+			Id:               forest.ID,
+			NationalForestId: forest.NationalForestID,
+			Name:             forest.Name,
+			MapLocation:      forest.MapLocation.String,
+		},
 	}
 
 	return response, nil
